{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 345,
  "lineage": "cdbbb50b-de72-5b23-3968-49dd7ad1d845",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "frankfurt_main_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436791802080:subnet/subnet-a67ac1cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "eu-central-1a"
                ]
              }
            ],
            "id": "subnet-a67ac1cc",
            "map_public_ip_on_launch": true,
            "owner_id": "436791802080",
            "state": "available",
            "vpc_id": "vpc-f1895a9b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "frankfurt_main_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436791802080:subnet/subnet-2370865f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "eu-central-1b"
                ]
              }
            ],
            "id": "subnet-2370865f",
            "map_public_ip_on_launch": true,
            "owner_id": "436791802080",
            "state": "available",
            "vpc_id": "vpc-f1895a9b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436791802080:vpc/vpc-f1895a9b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-fdb51696",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-14e6357e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-f1895a9b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-29421743",
            "owner_id": "436791802080",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main_replica",
      "provider": "provider.aws.eu_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:436791802080:vpc/vpc-69ff0f10",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-877c64ec",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-1ac2e17c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-69ff0f10",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-f4958e8d",
            "owner_id": "436791802080",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-0bb5a8dfa645305f3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bb5a8dfa645305f3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "436791802080",
            "subnet_ids": [
              "subnet-0cf0ff3459a775b3e",
              "subnet-0ef4e27390976cde1"
            ],
            "tags": {},
            "vpc_id": "vpc-029be15d5d8ce44e8"
          },
          "dependencies": [
            "aws_subnet.custom_a",
            "aws_subnet.custom_b",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "custom_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0895c644830d422dc",
            "id": "rtb-0895c644830d422dc",
            "owner_id": "436791802080",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "vpc_id": "vpc-029be15d5d8ce44e8"
          },
          "dependencies": [
            "aws_nat_gateway.custom",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08b4d3c5",
            "domain": "vpc",
            "id": "eipalloc-05bec0927b267c9b4",
            "network_interface": "eni-0c4524e7c6abcea7c",
            "private_dns": "ip-10-0-1-236.eu-central-1.compute.internal",
            "private_ip": "10.0.1.236",
            "public_dns": "ec2-3-126-53-228.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.53.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "classic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:loadbalancer/elb-classic",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-classic-1638210917.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 3,
                "interval": 5,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb-classic",
            "idle_timeout": 400,
            "instances": [
              "i-00151b254d496d2bb",
              "i-00baf81d899e8653c"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb-classic",
            "security_groups": [
              "sg-0ffad46e70b400bb5"
            ],
            "source_security_group": "436791802080/allow-web-ssh-nfs",
            "source_security_group_id": "sg-0ffad46e70b400bb5",
            "subnets": [
              "subnet-2370865f",
              "subnet-a67ac1cc"
            ],
            "tags": {
              "Name": "elb-classic"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_instance.elb_webserver_01",
            "aws_instance.elb_webserver_02",
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elb_webserver_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076431be05aaf8080",
            "arn": "arn:aws:ec2:eu-central-1:436791802080:instance/i-00151b254d496d2bb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "web_server_profile",
            "id": "i-00151b254d496d2bb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0340264f40dc60b51",
            "private_dns": "ip-172-31-26-136.eu-central-1.compute.internal",
            "private_ip": "172.31.26.136",
            "public_dns": "ec2-52-57-137-8.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.57.137.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06ceb30d7352c648f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-web-ssh-nfs"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a67ac1cc",
            "tags": {
              "Name": "ELB-Machine01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ffad46e70b400bb5"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.web_server_profile",
            "aws_key_pair.ec2",
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elb_webserver_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076431be05aaf8080",
            "arn": "arn:aws:ec2:eu-central-1:436791802080:instance/i-00baf81d899e8653c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "web_server_profile",
            "id": "i-00baf81d899e8653c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d5218620875a237",
            "private_dns": "ip-172-31-33-44.eu-central-1.compute.internal",
            "private_ip": "172.31.33.44",
            "public_dns": "ec2-18-196-100-7.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.196.100.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b558e2ee49cf8b42",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-web-ssh-nfs"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2370865f",
            "tags": {
              "Name": "ELB-Machine02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ffad46e70b400bb5"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.web_server_profile",
            "aws_key_pair.ec2",
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_web_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076431be05aaf8080",
            "arn": "arn:aws:ec2:eu-central-1:436791802080:instance/i-029b6e7fa76a81e9e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "web_server_profile",
            "id": "i-029b6e7fa76a81e9e",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f6a826c0d4e8bb7b",
            "private_dns": "ip-10-0-2-16.eu-central-1.compute.internal",
            "private_ip": "10.0.2.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0468933b21b07c6f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef4e27390976cde1",
            "tags": {
              "Name": "HelloVPC_Private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044f3ff0baed08d27"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.web_server_profile",
            "aws_key_pair.ec2",
            "aws_security_group.ec2_vpc_private",
            "aws_subnet.custom_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_web_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076431be05aaf8080",
            "arn": "arn:aws:ec2:eu-central-1:436791802080:instance/i-03cf7940b969c39f1",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "web_server_profile",
            "id": "i-03cf7940b969c39f1",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07290740c70d3298c",
            "private_dns": "ip-10-0-1-4.eu-central-1.compute.internal",
            "private_ip": "10.0.1.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-095c3311bcd36d9f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf0ff3459a775b3e",
            "tags": {
              "Name": "HelloVPC_Public"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc95ea5c83244aeb"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.web_server_profile",
            "aws_key_pair.ec2",
            "aws_security_group.ec2_vpc",
            "aws_subnet.custom_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-076431be05aaf8080",
            "arn": "arn:aws:ec2:eu-central-1:436791802080:instance/i-09695c5c232d00328",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "web_server_profile",
            "id": "i-09695c5c232d00328",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09f2c1d597dd5584a",
            "private_dns": "ip-172-31-33-61.eu-central-1.compute.internal",
            "private_ip": "172.31.33.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-061ebdbeb56704647",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-web-ssh-nfs"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2370865f",
            "tags": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ffad46e70b400bb5"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.web_server_profile",
            "aws_key_pair.ec2",
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_replica",
      "provider": "provider.aws.eu_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3405d2d2522162",
            "arn": "arn:aws:ec2:eu-west-1:436791802080:instance/i-03dbb62f65d2dc646",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03dbb62f65d2dc646",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003bedc05cac11909",
            "private_dns": "ip-172-31-39-29.eu-west-1.compute.internal",
            "private_ip": "172.31.39.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d89f75a8c2e6af43",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-web-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6ab7d830",
            "tags": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01eb8bb6a2038f28b"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_replica",
            "aws_security_group.ec2_replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0345f08196e722062",
            "owner_id": "436791802080",
            "tags": {
              "Name": "CustomInternetGateway"
            },
            "vpc_id": "vpc-029be15d5d8ce44e8"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:loadbalancer/app/alb-main/bfa56c257fbfae1e",
            "arn_suffix": "app/alb-main/bfa56c257fbfae1e",
            "dns_name": "alb-main-1745140250.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:loadbalancer/app/alb-main/bfa56c257fbfae1e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-main",
            "security_groups": [
              "sg-0ffad46e70b400bb5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-2370865f"
              },
              {
                "subnet_id": "subnet-a67ac1cc"
              }
            ],
            "subnets": [
              "subnet-2370865f",
              "subnet-a67ac1cc"
            ],
            "vpc_id": "vpc-f1895a9b",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:listener/app/alb-main/bfa56c257fbfae1e/08749c1f3a015031",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:targetgroup/elb-web-server-01/b90edc1bbf6ae348",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:listener/app/alb-main/bfa56c257fbfae1e/08749c1f3a015031",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:loadbalancer/app/alb-main/bfa56c257fbfae1e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main_target",
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main_target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:targetgroup/elb-web-server-01/b90edc1bbf6ae348",
            "arn_suffix": "targetgroup/elb-web-server-01/b90edc1bbf6ae348",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:targetgroup/elb-web-server-01/b90edc1bbf6ae348",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "elb-web-server-01",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-f1895a9b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:targetgroup/elb-web-server-01/b90edc1bbf6ae348-20200604122544344600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:targetgroup/elb-web-server-01/b90edc1bbf6ae348",
            "target_id": "i-00151b254d496d2bb"
          },
          "dependencies": [
            "aws_instance.elb_webserver_01",
            "aws_lb_target_group.main_target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:targetgroup/elb-web-server-01/b90edc1bbf6ae348-20200604122544312300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:436791802080:targetgroup/elb-web-server-01/b90edc1bbf6ae348",
            "target_id": "i-00baf81d899e8653c"
          },
          "dependencies": [
            "aws_instance.elb_webserver_02",
            "aws_lb_target_group.main_target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "custom",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bec0927b267c9b4",
            "id": "nat-01044678be232b844",
            "network_interface_id": "eni-0c4524e7c6abcea7c",
            "private_ip": "10.0.1.236",
            "public_ip": "3.126.53.228",
            "subnet_id": "subnet-0cf0ff3459a775b3e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.custom_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "custom",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0e5f07f8b8c7df404",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "436791802080",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "CustomACL"
            },
            "vpc_id": "vpc-029be15d5d8ce44e8"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b1131ff6077354e2",
            "owner_id": "436791802080",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0345f08196e722062",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0345f08196e722062",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CustomPublicRouteTable"
            },
            "vpc_id": "vpc-029be15d5d8ce44e8"
          },
          "dependencies": [
            "aws_internet_gateway.custom",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a895a143918ff32",
            "route_table_id": "rtb-0b1131ff6077354e2",
            "subnet_id": "subnet-0cf0ff3459a775b3e"
          },
          "dependencies": [
            "aws_route_table.custom_public",
            "aws_subnet.custom_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436791802080:security-group/sg-0ffad46e70b400bb5",
            "description": "allow-web-ssh-nfs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffad46e70b400bb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-web-ssh-nfs",
            "name_prefix": null,
            "owner_id": "436791802080",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-f1895a9b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_replica",
      "provider": "provider.aws.eu_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:436791802080:security-group/sg-01eb8bb6a2038f28b",
            "description": "allow-web-ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01eb8bb6a2038f28b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-web-ssh",
            "name_prefix": null,
            "owner_id": "436791802080",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-69ff0f10"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436791802080:security-group/sg-0dc95ea5c83244aeb",
            "description": "allow-web-ssh-private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc95ea5c83244aeb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-web-ssh-private",
            "name_prefix": null,
            "owner_id": "436791802080",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-029be15d5d8ce44e8"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_vpc_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436791802080:security-group/sg-044f3ff0baed08d27",
            "description": "allow-db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044f3ff0baed08d27",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "ping",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "allow-db",
            "name_prefix": null,
            "owner_id": "436791802080",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-029be15d5d8ce44e8"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436791802080:security-group/sg-0d245deae51116fed",
            "description": "allow-mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d245deae51116fed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ffad46e70b400bb5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-mysql",
            "name_prefix": null,
            "owner_id": "436791802080",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-f1895a9b"
          },
          "dependencies": [
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436791802080:security-group/sg-08470fb91a3dbc7b2",
            "description": "allow-redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08470fb91a3dbc7b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ffad46e70b400bb5"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "allow-redis",
            "name_prefix": null,
            "owner_id": "436791802080",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-f1895a9b"
          },
          "dependencies": [
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "custom_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436791802080:subnet/subnet-0cf0ff3459a775b3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cf0ff3459a775b3e",
            "map_public_ip_on_launch": true,
            "owner_id": "436791802080",
            "tags": {
              "Name": "10.0.1.0/24 - CustomA"
            },
            "vpc_id": "vpc-029be15d5d8ce44e8"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "custom_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436791802080:subnet/subnet-0ef4e27390976cde1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ef4e27390976cde1",
            "map_public_ip_on_launch": false,
            "owner_id": "436791802080",
            "tags": {
              "Name": "10.0.2.0/24 - CustomB"
            },
            "vpc_id": "vpc-029be15d5d8ce44e8"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436791802080:vpc/vpc-029be15d5d8ce44e8",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb5a8dfa645305f3",
            "default_route_table_id": "rtb-0895c644830d422dc",
            "default_security_group_id": "sg-09bb296662e0c570e",
            "dhcp_options_id": "dopt-14e6357e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-029be15d5d8ce44e8",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-060523a4b7139487e",
            "ipv6_cidr_block": "2a05:d014:872:8000::/56",
            "main_route_table_id": "rtb-0895c644830d422dc",
            "owner_id": "436791802080",
            "tags": {
              "Name": "CustomVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.219.44.0/22",
              "52.219.140.0/24",
              "52.219.72.0/22"
            ],
            "id": "vpce-0de0f61e650e963a1",
            "owner_id": "436791802080",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0895c644830d422dc"
            ],
            "service_name": "com.amazonaws.eu-central-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-029be15d5d8ce44e8"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    }
  ]
}